Last refactor